[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/containers/Placeholder_16-9_cuatro.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/icons/level_icon/nivel2.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/level_icon/nivel3.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/level_icon/nivel1.2.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/level_icon/nivel2_gris.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/level_icon/nivel3_gris.png" type="Texture" id=7]
[ext_resource path="res://assets/icons/level_icon/nivel1_gris.png" type="Texture" id=8]
[ext_resource path="res://ui/Interfaces/levelSelector/LevelSelector.gd" type="Script" id=9]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1600, 900 )

[sub_resource type="DynamicFont" id=2]
size = 120
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 82
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "InButtons"
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/Levels/Level_1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2000, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel/Levels/Level_2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2604, 0 ), Vector2( 604, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel/Levels/Level_3:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3208, 0 ), Vector2( 1208, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "loading"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect/loading:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect/ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="LevelSelector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.174
anchor_right = 0.5
anchor_bottom = 0.174
margin_left = -354.0
margin_top = -59.92
margin_right = 354.0
margin_bottom = 60.08
custom_fonts/font = SubResource( 2 )
text = "Selecci√≥n de niveles"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Levels" type="HBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -912.0
margin_top = -252.0
margin_right = 960.0
margin_bottom = 380.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level_1" type="TextureButton" parent="Panel/Levels"]
margin_right = 600.0
margin_bottom = 632.0
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 8 )

[node name="Label" type="Label" parent="Panel/Levels/Level_1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -85.5
margin_top = -17.0
margin_right = 85.5
margin_bottom = 66.0
custom_fonts/font = SubResource( 3 )
text = "Nivel 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level_2" type="TextureButton" parent="Panel/Levels"]
margin_left = 604.0
margin_right = 1204.0
margin_bottom = 632.0
disabled = true
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 6 )

[node name="Label2" type="Label" parent="Panel/Levels/Level_2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -85.5
margin_top = -17.0
margin_right = 85.5
margin_bottom = 66.0
custom_fonts/font = SubResource( 3 )
text = "Nivel 2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level_3" type="TextureButton" parent="Panel/Levels"]
margin_left = 1208.0
margin_right = 1808.0
margin_bottom = 632.0
disabled = true
texture_normal = ExtResource( 4 )
texture_disabled = ExtResource( 7 )

[node name="Label3" type="Label" parent="Panel/Levels/Level_3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -85.5
margin_top = -17.0
margin_right = 85.5
margin_bottom = 66.0
custom_fonts/font = SubResource( 3 )
text = "Nivel 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loading" type="Label" parent="ColorRect"]
visible = false
anchor_left = 0.754
anchor_top = 0.911
anchor_right = 0.754
anchor_bottom = 0.911
margin_left = -399.68
margin_top = -39.8801
margin_right = 409.32
margin_bottom = 43.1199
custom_fonts/font = SubResource( 3 )
text = "Cargando nivel, por favor espera..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
margin_left = 1048.0
margin_top = 952.0
margin_right = 1880.0
margin_bottom = 1016.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/InButtons = SubResource( 4 )
anims/loading = SubResource( 5 )
[connection signal="pressed" from="Panel/Levels/Level_1" to="." method="_on_Level_1_pressed"]
[connection signal="pressed" from="Panel/Levels/Level_2" to="." method="_on_Level_2_pressed"]
[connection signal="pressed" from="Panel/Levels/Level_3" to="." method="_on_Level_3_pressed"]
